--- a/src/AutoModeCodeGenerator.Samples/Samples.csproj
+++ b/src/AutoModeCodeGenerator.Samples/Samples.csproj
@@ -19,7 +19,8 @@
 
 
 	<ItemGroup>
-	  <ProjectReference Include="..\AutoModeCodeGenerator.Analyzers\AutoModeCodeGenerator.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
+		<PackageReference Include="AutoModeCodeGenerator.Analyzers" Version="1.0.0.1-beta-2" PrivateAssets="all" />
+		<!--<ProjectReference Include="..\AutoModeCodeGenerator.Analyzers\AutoModeCodeGenerator.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
 	</ItemGroup>
 
 </Project>
