--- a/src/AutoModeCodeGenerator.Analyzers/AutoModeCodeGenerator.Analyzers.csproj
+++ b/src/AutoModeCodeGenerator.Analyzers/AutoModeCodeGenerator.Analyzers.csproj
@@ -5,6 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>11.0</LangVersion>
+		<Version>1.0.0.1-beta-2</Version>
 	</PropertyGroup>
 
 	<Import Project="CodeAnalyzers.props" />
