--- a/src/AutoModeCodeGenerator.Analyzers/NugetPackage.props
+++ b/src/AutoModeCodeGenerator.Analyzers/NugetPackage.props
@@ -1,5 +1,6 @@
 <Project>
 	<PropertyGroup>
+		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<PackageProjectUrl>https://github.com/mccj/AutoModeCodeGenerator.git</PackageProjectUrl>
 		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
