--- a/src/AutoModeCodeGenerator.Analyzers/AutoModeCodeGenerator.Analyzers.csproj
+++ b/src/AutoModeCodeGenerator.Analyzers/AutoModeCodeGenerator.Analyzers.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>11.0</LangVersion>
-		<Version>1.0.0.1-beta-2</Version>
+		<Version>1.0.0.1</Version>
 	</PropertyGroup>
 
 	<Import Project="CodeAnalyzers.props" />
@@ -21,7 +21,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.7.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" PrivateAssets="all" />
 	</ItemGroup>
 	
