--- a/src/AutoModeCodeGenerator.Samples/Samples.csproj
+++ b/src/AutoModeCodeGenerator.Samples/Samples.csproj
@@ -20,8 +20,8 @@
 
 
 	<ItemGroup>
-		<PackageReference Include="AutoModeCodeGenerator.Analyzers" Version="1.0.0.5" PrivateAssets="all" />
-		<!--<ProjectReference Include="..\AutoModeCodeGenerator.Analyzers\AutoModeCodeGenerator.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />-->
+		<!--<PackageReference Include="AutoModeCodeGenerator.Analyzers" Version="1.0.0.5" PrivateAssets="all" />-->
+		<ProjectReference Include="..\AutoModeCodeGenerator.Analyzers\AutoModeCodeGenerator.Analyzers.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 </Project>
